Scrollbar fix, thank the lord?

--- a/assets/scss/tufte/_layout.scss
+++ b/assets/scss/tufte/_layout.scss
@@ -1,16 +1,3 @@
-<<<<<<< HEAD
-<<<<<<< HEAD
-.container {
-  background: var(--bg);
-  margin: 0 auto;
-  max-width: 800px;
-  width: 80%;
-}
-
-=======
->>>>>>> b760d14 (Scrollbar fix, thank the lord)
-=======
->>>>>>> b760d14 (Scrollbar fix, thank the lord)
 main,
 footer,
 .nav-container {
